# cs521mp3

part1_cpp_ad/: CMakeLists.txt  dual_number.h  dual_test.cpp
part2_jax_ad/: reverse_ad.ipynb  reverse_mode.py
